--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "testing": "jest --watch",
     "build": "webpack",
     "watch": "webpack --watch"
   },
@@ -12,6 +13,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
+    "babel-jest": "^29.5.0",
     "css-loader": "^6.7.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
